...
)
data class NoteEntry(
    @PrimaryKey(autoGenerate = true) override val id: Int = 0,
    override val remoteId: String = UUID.randomUUID().toString(),
    val title: String,
    val encryptedContent: ByteArray,
    val category: String = "General",
    val colorHex: String = "#FFFFFF",
    val isChecklist: Boolean = false,
    val tags: String = "",
    val snippetFilePaths: String = "",
    val selfDestructAt: Long? = null,
    val isLocked: Boolean = false,
...
